--- a/components/variables.scss
+++ b/components/variables.scss
@@ -8,9 +8,9 @@
  * Scaffolding
  * -------------------------------------------------------------------------- */
 
-$navbar-bg: #071B26;
+$brand-color: #071B26;
+$navbar-bg: $brand-color;
 $text-color: #373e42;
-$brand-color: #21ce99;
 $active-color: #0099e5;
 
 /*
