--- a/components/masthead.scss
+++ b/components/masthead.scss
@@ -13,7 +13,7 @@ section.masthead {
 
   h1, h2 {
     color: white;
-    font-family: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
+    font-family: $font-family-base;
     font-weight: lighter;
   }
 
