--- a/components/variables.scss
+++ b/components/variables.scss
@@ -17,7 +17,7 @@ $active-color: #0099e5;
  * Typography
  * -------------------------------------------------------------------------- */
 
-$font-family-base: 'SF UI Text', 'Helvetica Neue', 'Helvetica', 'Roboto', sans-serif;
+$font-family-base: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
 
 /*
  * Media queries breakpoints
