--- a/components/features-page/masthead.scss
+++ b/components/features-page/masthead.scss
@@ -9,6 +9,10 @@
 
   .ui.container nav.sections {
     margin: 2rem 1rem 0 1rem;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 0.5em;
+    padding: 1em;
+    backdrop-filter: blur(10px);
 
     .column.section-item {
       padding-left: 14px !important;
