--- a/components/masthead.scss
+++ b/components/masthead.scss
@@ -21,4 +21,10 @@ section.masthead {
     font-size: 6vmin;
     margin: 0 0 0.3em 0;
   }
+
+  @media screen and (width <= $screen-sm-min) {
+    h1 {
+      font-size: 10vmin;
+    }
+  }
 }
