--- a/components/pricing-page/faq-section.scss
+++ b/components/pricing-page/faq-section.scss
@@ -1,11 +1,20 @@
 @import '../variables.scss';
 
 section.faq-section {
-  padding: 2rem 0;
+  padding: 4rem 0;
   h2 {
     text-align: center;
     font-family: $font-family-base;
     font-weight: 300;
-    font-size: 2.5vmin;
+    font-size: 30px;
+  }
+
+  p {
+    text-align: justify;
+    text-indent: 1em;
+  }
+
+  .ui.segment {
+    padding: 3em;
   }
 }
