--- a/components/top-page/mobile-description.scss
+++ b/components/top-page/mobile-description.scss
@@ -5,3 +5,8 @@
   }
 }
 
+@media only screen and (min-width : 1200px) {
+  .description-mobile .ui.image img.screenshot {
+    max-width: 1200px;
+  }
+}
