--- a/components/top-page/keep-in-touch-section.scss
+++ b/components/top-page/keep-in-touch-section.scss
@@ -1,11 +1,10 @@
 .keep-in-touch-section {
   text-align: center;
-  padding: 2rem 0;
+  padding: 2rem 0 1.4rem 0;
   background: white;
 
   h2 {
     font-family: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
-    font-weight: 300;
     font-size: 2.5vmin;
   }
 }
