--- a/components/top-page/news.scss
+++ b/components/top-page/news.scss
@@ -1,7 +1,11 @@
 .news-section {
+  padding: 2rem 0 1.4rem 0;
+  border-top: 1px solid rgba(34, 36, 38, 0.15);
+  border-bottom: 1px solid rgba(34, 36, 38, 0.15);
+  background: #fafafa;
+
   h2 {
     font-family: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
-    font-weight: 300;
     font-size: 2.5vmin;
     text-align: center;
   }
