--- a/components/top-page/keep-in-touch-section.scss
+++ b/components/top-page/keep-in-touch-section.scss
@@ -5,6 +5,6 @@
 
   h2 {
     font-family: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
-    font-size: 2.5vmin;
+    font-size: 1.8rem;
   }
 }
