--- a/components/top-page/learn-more-section.scss
+++ b/components/top-page/learn-more-section.scss
@@ -1,3 +1,5 @@
+@import '../variables.scss';
+
 .learn-more-section {
   text-align: center;
   padding: 2rem 0;
@@ -10,6 +12,12 @@
     font-weight: lighter;
     font-size: 6vmin;
     margin: 0 0 0.3em 0;
+  }
+
+  @media screen and (width <= $screen-sm-min) {
+    h1 {
+      font-size: 10vmin;
+    }
   }
 
   .description {
