--- a/components/top-page/news.scss
+++ b/components/top-page/news.scss
@@ -6,7 +6,7 @@
 
   h2 {
     font-family: 'Helvetica Neue', Lato, Arial, Helvetica, sans-serif;
-    font-size: 2.5vmin;
+    font-size: 1.8rem;
     text-align: center;
   }
 
