--- a/components/top-page/desktop-description.scss
+++ b/components/top-page/desktop-description.scss
@@ -13,4 +13,10 @@
       border: 1px solid rgba(255, 255, 255, 0.3);
     }
   }
+
+  .screenshot {
+    .ui.image {
+      margin: 0 auto;
+    }
+  }
 }
