--- a/components/top-page/desktop-description.scss
+++ b/components/top-page/desktop-description.scss
@@ -6,6 +6,7 @@
 
   .link-demo {
     margin-top: 1em;
+    margin-bottom: 1em;
     > a {
       border-radius: 1.3em;
       background-color: rgba(0, 0, 0, 0.4);
