feat(features): Add plugins

--- a/components/features-page/extensibility-section.scss
+++ b/components/features-page/extensibility-section.scss
@@ -12,6 +12,22 @@
         color: #42b939;
       }
     }
+
+    .plugin-examples {
+      margin-bottom: 1em;
+    }
+
+    .plugin-screenshot {
+      background-color: #f4f4f4;
+      border-radius: 4px;
+      margin: 8px;
+      padding-top: 1em;
+      padding-bottom: 1em;
+      height: 200px;
+    }
+    .screenshot {
+      margin: 0 auto;
+    }
   }
 
   hr.separator {
