--- a/src/components/pricing-why-a-subscription.less
+++ b/src/components/pricing-why-a-subscription.less
@@ -3,6 +3,7 @@
 section#pricing-why {
   position: relative;
   padding-top: 3em;
+  padding-bottom: 2rem;
   background-color: #7d6ae0;
   background-image: linear-gradient(180deg, #7d6ae0 0, #7298d9);
 
@@ -21,19 +22,6 @@ section#pricing-why {
     bottom: 100%;
     left: 0;
     right: 0;
-  }
-
-  &:after {
-    background-image: url(/section-separator.svg);
-    content: '';
-    display: block;
-    padding-bottom: calc(11.546% + 6px);
-    margin-left: -48px;
-    background-size: cover;
-    position: relative;
-    z-index: 10;
-    margin-top: 3vh;
-    margin-bottom: -.1875rem;
   }
 
   h2 {
