--- a/src/components/section-blogposts.less
+++ b/src/components/section-blogposts.less
@@ -10,6 +10,10 @@ section#blogposts {
     margin-top: 0rem;
   }
 
+  p.sub-headline {
+    text-align: center;
+  }
+
   .carousel {
     margin: 3rem 0 5rem 0;
 
