--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -26,4 +26,12 @@
       }
     }
   }
+
+  .section-get-now {
+    background: url(../images/masthead-bg.jpg);
+    background-color: #ecf2fd;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+  }
 }
