feat(*): Add alternativeTo and about myself

--- a/src/components/reviews-section-testimonials.less
+++ b/src/components/reviews-section-testimonials.less
@@ -1,7 +1,6 @@
 @import "../variables.less";
 
 section#reviews {
-  background: #ecf2fd;
   position: relative;
   padding-top: 3em;
   padding-bottom: 3em;
@@ -10,6 +9,11 @@ section#reviews {
     text-align: center;
     font-size: 2.82rem;
     margin-top: 0rem;
+
+    img {
+      margin-left: 1rem;
+      vertical-align: middle;
+    }
   }
 
   p.sub-headline {
