--- a/src/components/testimonials-faces.less
+++ b/src/components/testimonials-faces.less
@@ -7,6 +7,7 @@
     display: inline-block;
     margin: 0.3rem 0.3rem;
     position: relative;
+    cursor: pointer;
 
     img {
       border: 1px solid rgba(0,0,0,0.2);
