--- a/src/components/block-badge.less
+++ b/src/components/block-badge.less
@@ -10,6 +10,12 @@
   text-align: center;
   line-height: 20px;
 
+  &.center {
+    position: relative;
+    left: 50%;
+    margin-left: -1.09rem;
+  }
+
   &.white {
     background: white;
   }
