feat(top): Add screenshots for mobile

--- a/src/components/top-masthead.less
+++ b/src/components/top-masthead.less
@@ -31,4 +31,12 @@
       }
     }
   }
+  .screenshot {
+    max-width: 1024px;
+    margin: 0 auto;
+
+    &.screenshot-ios, &.screenshot-android {
+      max-width: 800px;
+    }
+  }
 }
