--- a/src/components/section-get-started.less
+++ b/src/components/section-get-started.less
@@ -35,6 +35,11 @@
     margin-top: 1rem;
   }
 
+  .link-to-discount {
+    color: rgba(0, 0, 0, 0.5);
+    margin-top: 1rem;
+  }
+
   .pricing {
     font-size: 1.5rem;
   }
