--- a/src/components/section-get-started.less
+++ b/src/components/section-get-started.less
@@ -1,7 +1,20 @@
 @import "../variables.less";
 
 #get-started {
-  padding: 2rem 0;
+  &:before {
+    background-image: url(/section-separator-sync.svg);
+    content: '';
+    display: block;
+    width: 100%;
+    padding-bottom: 7.77%;
+    top: -2px;
+    background-size: cover;
+    position: relative;
+    z-index: 10;
+    margin-bottom: -.1875rem;
+  }
+
+  padding: 0 0 2rem 0;
   border-top: 1px solid rgba(34, 36, 38, 0.15);
   border-bottom: 1px solid rgba(34, 36, 38, 0.15);
   border: none;
