--- a/src/variables.less
+++ b/src/variables.less
@@ -1,3 +1,5 @@
+@import "./semantic/site/globals/site.variables";
+
 @mobileBreakpoint            : 420px;
 @tabletBreakpoint            : 768px;
 @computerBreakpoint          : 992px;
