--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -12,7 +12,7 @@
   margin-bottom: 0;
   padding-bottom: 10vh;
   // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 7px 17px 0 rgba(0, 0, 0, 0.1);
-  color: rgba(3,27,78,.7);
+  color: rgba(3, 27, 78, .7);
 
   @media (max-width: @tabletBreakpoint) {
     background-position: center bottom;
