--- a/src/components/testimonials-faces.less
+++ b/src/components/testimonials-faces.less
@@ -1,6 +1,6 @@
 .carousel-face-dot-container {
   text-align: center;
-  margin: 2rem;
+  margin: 2rem 0 0 0;
 
   .carousel-face-dot-item {
     position: relative;
@@ -16,18 +16,10 @@
     }
 
     &.active {
-      &:after {
-        content: "";
-        position: absolute;
-        right: 0;
-        bottom: -8px;
-        left: 0;
-        width: 0px;
-        height: 0px;
-        margin: auto;
-        border-style: solid;
-        border-color: transparent transparent #ff63c3 transparent;
-        border-width: 0 10px 10px 10px;
+      transform: scale(1.4);
+      z-index: 10;
+      img {
+        border: 2px solid #ff63c3;
       }
     }
   }
