--- a/src/components/top-section-simple-features.less
+++ b/src/components/top-section-simple-features.less
@@ -5,10 +5,10 @@ section#simple-features {
   padding-top: 3em;
   background-color: #7d6ae0;
   background-image: linear-gradient(180deg, #7d6ae0 0, #7298d9);
-  text-align: center;
+  color: white;
 
   .markdown-icon {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
   }
 
   &:before {
@@ -47,7 +47,39 @@ section#simple-features {
     }
   }
 
+  p {
+    opacity: .8;
+  }
+
+  .video-container {
+    overflow: hidden;
+    padding-top: 56.25%; /* 16:9*/
+    position: relative;
+
+    iframe {
+      border: 0;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+  }
+
+  .three.column.grid {
+    .column {
+      h3 {
+        font-weight: bold;
+        color: white;
+      }
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
+
   .carousel {
+    display: none;
     margin: 3rem 0 5rem 0;
 
     .flickity-page-dots {
