fix(top): animate testimonial faces

--- a/src/components/section-testimonials.less
+++ b/src/components/section-testimonials.less
@@ -54,6 +54,9 @@ section#testimonials {
           content: ", ";
         }
         .links {
+          display: inline-block;
+          margin-left: .4rem;
+
           a {
             color: rgba(0,0,0,0.4);
           }
