--- a/src/components/testimonials-faces.less
+++ b/src/components/testimonials-faces.less
@@ -8,6 +8,7 @@
     margin: 0.3rem 0.3rem;
     position: relative;
     cursor: pointer;
+    transition: all .2s ease-out;
 
     img {
       border: 1px solid rgba(0,0,0,0.2);
