--- a/src/components/pricing-plan-panel.less
+++ b/src/components/pricing-plan-panel.less
@@ -1,9 +1,11 @@
 @import '../variables.less';
 
 section.masthead .plan-panel {
-  background: white;
+  background: #ffffff40;
+  backdrop-filter: blur(10px);
   box-shadow: 0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07);
-  border-radius: 12px;
+  border-radius: 16px;
+  border: .5px solid #ffffffb0;
 
   h2.price {
     font-size: 5em;
