feat(sync): add icons

--- a/src/components/top-section-seamless-sync.less
+++ b/src/components/top-section-seamless-sync.less
@@ -1,6 +1,7 @@
 section#seamless-sync {
   position: relative;
   padding-top: 3em;
+  padding-bottom: 3rem;
   background-color: #7d6ae0;
   background-image: linear-gradient(180deg, #7d6ae0 0, #7298d9);
   text-align: center;
@@ -16,6 +17,23 @@ section#seamless-sync {
     bottom: 100%;
     left: 0;
     right: 0;
+  }
+
+  .image-container {
+    display: flex;
+    color: white;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+
+    .svg-icon {
+      width: 14rem;
+      height: 14rem;
+    }
+    .small.svg-icon {
+      width: 12rem;
+      height: 12rem;
+    }
   }
 
   h2 {
