feat(masthead): add 3d background triangles

--- a/src/components/3d-perspective-image.less
+++ b/src/components/3d-perspective-image.less
@@ -1,11 +1,43 @@
 .perspective-image {
   perspective: 2000px;
   overflow: visible;
+  position: relative;
+
+  .content {
+    overflow: visible;
+    transform-style: preserve-3d;
+  }
 
   .screenshot {
     overflow: visible !important;
   }
   img {
     transform-style: preserve-3d;
+  }
+
+  .bg-triangles {
+    position: absolute;
+    pointer-events: none;
+    opacity: .1;
+    transform: translateZ(-200px) translateX(100px) translateY(-200px) scale(1.6);
+    > svg {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  .bg-triangles-2 {
+    opacity: .1;
+    transform: translateZ(-600px) translateX(100px) translateY(-200px) scale(-2) rotate(90deg);
+
+    > svg * {
+      fill: none;
+      stroke: currentColor;
+    }
+  }
+
+  .bg-triangles-3 {
+    opacity: .05;
+    transform: translateZ(-1000px) translateX(100px) translateY(-200px) scale(-2);
   }
 }
