fix(features): update text

--- a/src/components/top-section-simple-features.less
+++ b/src/components/top-section-simple-features.less
@@ -8,7 +8,6 @@ section#simple-features {
   color: white;
 
   .markdown-icon {
-    margin-bottom: 1rem;
   }
 
   &:before {
@@ -71,6 +70,7 @@ section#simple-features {
       h3 {
         font-weight: bold;
         color: white;
+        margin-top: .3em;
       }
       p {
         font-size: 1.2rem;
