fix(perspective-image): support specifying tilt mode

--- a/src/components/3d-perspective-image.less
+++ b/src/components/3d-perspective-image.less
@@ -17,8 +17,11 @@
 
   .bg-triangles {
     position: absolute;
+    left: 0;
+    right: 0;
     pointer-events: none;
     opacity: .1;
+    color: #3d7aed;
     transform: translateZ(-200px) translateX(100px) translateY(-200px) scale(1.6);
     > svg {
       width: 100%;
