feat(top): add some images

--- a/src/components/top-section-beautiful-ui.less
+++ b/src/components/top-section-beautiful-ui.less
@@ -22,11 +22,19 @@ section#beautiful-ui {
   .three.column.grid {
     .column {
       h3 {
+        margin-top: .5rem;
         font-weight: bold;
       }
       p {
         font-size: 1.2rem;
       }
+      .icon {
+        width: 6em;
+      }
     }
+  }
+
+  .perspective-image .bg-triangles {
+    color: white;
   }
 }
