feat(top): add color icons and links

--- a/src/common.less
+++ b/src/common.less
@@ -21,6 +21,23 @@
   }
 }
 
+.white.link {
+  color: #fffc;
+
+  &:hover {
+    color: #ffff;
+  }
+}
+
+.bold.link {
+  font-weight: bold;
+}
+
+.underline.link {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
 .svg-icon {
   width: 1em;
   height: 1em;
