--- a/src/components/top-section-beautiful-ui.less
+++ b/src/components/top-section-beautiful-ui.less
@@ -19,6 +19,14 @@ section#beautiful-ui {
     color: rgba(255,255,255,0.65);
   }
 
+  .ui.rounded.white.button {
+    margin: 0;
+
+    &:hover {
+      color: #ff63c3;
+    }
+  }
+
   .three.column.grid {
     .column {
       h3 {
@@ -28,7 +36,7 @@ section#beautiful-ui {
       p {
         font-size: 1.2rem;
       }
-      .icon {
+      svg.icon {
         width: 6em;
       }
     }
