--- a/src/components/top-section-seamless-sync.less
+++ b/src/components/top-section-seamless-sync.less
@@ -55,15 +55,10 @@ section#seamless-sync {
     color: white;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
 
-    .svg-icon {
-      width: 14rem;
-      height: 14rem;
-    }
     .small.svg-icon {
-      width: 12rem;
-      height: 12rem;
+      width: 6em;
+      height: auto;
     }
   }
 
