--- a/src/components/top-section-beautiful-ui.less
+++ b/src/components/top-section-beautiful-ui.less
@@ -45,4 +45,20 @@ section#beautiful-ui {
   .perspective-image .bg-triangles {
     color: white;
   }
+
+  .video-container {
+    position: relative;
+    overflow: hidden;
+    background: black;
+
+    border-radius: .2em;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07), rgba(255, 255, 255, 0.3) 0px 0px 0px 1px;
+
+    video {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  }
+
 }
