--- a/src/components/layout.less
+++ b/src/components/layout.less
@@ -1,3 +1,6 @@
+// whitelist for PurgeCSS
+@import "semantic-ui-less/definitions/collections/grid.less";
+@import "semantic-ui-less/definitions/elements/label.less";
 @font-family-base: 'SF UI Text', 'Helvetica Neue', 'Helvetica', 'Roboto', sans-serif;
 
 html, body {
