feat(top): add web clipper

--- a/src/components/top-section-beautiful-ui.less
+++ b/src/components/top-section-beautiful-ui.less
@@ -27,7 +27,7 @@ section#beautiful-ui {
     }
   }
 
-  .three.column.grid {
+  .three.column.grid, .two.column.grid {
     .column {
       h3 {
         margin-top: .5rem;
