feat(navigation): add links and icons

--- a/src/pages/gallery.less
+++ b/src/pages/gallery.less
@@ -38,3 +38,10 @@
   padding: 6px 10px;
   text-align: center;
 }
+
+.gallery .ui.grid .row > .gallery-explore-more.column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
