fix(nav): improve navigation
move a link to docs on the navbar from the more menu

https://github.com/inkdropapp/docs/issues/63

--- a/src/variables.less
+++ b/src/variables.less
@@ -1,7 +1,7 @@
-@import "./semantic/site/globals/site.variables";
+@import './semantic/site/globals/site.variables';
 
-@mobileBreakpoint            : 420px;
-@tabletBreakpoint            : 768px;
-@computerBreakpoint          : 992px;
-@largeMonitorBreakpoint      : 1200px;
-@widescreenMonitorBreakpoint : 1920px;
+@mobileBreakpoint: 560px;
+@tabletBreakpoint: 768px;
+@computerBreakpoint: 992px;
+@largeMonitorBreakpoint: 1200px;
+@widescreenMonitorBreakpoint: 1920px;
