--- a/src/components/section-testimonials.less
+++ b/src/components/section-testimonials.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 section#testimonials {
   &:before {
@@ -11,7 +11,7 @@ section#testimonials {
     background-size: cover;
     position: relative;
     z-index: 10;
-    margin-bottom: -.1875rem;
+    margin-bottom: -0.1875rem;
   }
 
   h2 {
@@ -22,7 +22,7 @@ section#testimonials {
 
     .button {
       font-size: 1rem;
-      padding: .4rem .6rem;
+      padding: 0.4rem 0.6rem;
     }
   }
 
@@ -44,7 +44,8 @@ section#testimonials {
 
         .face {
           border-radius: 50%;
-          box-shadow: 0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07);
+          box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1),
+            0 3px 10px rgba(0, 0, 0, 0.07);
         }
 
         .name {
@@ -53,23 +54,24 @@ section#testimonials {
           font-weight: bold;
 
           &:before {
-            content: "— ";
+            content: '— ';
             font-weight: normal;
           }
         }
-        .title, .company {
-          font-size: .9rem;
-          color: rgba(0,0,0,0.6);
+        .title,
+        .company {
+          font-size: 0.9rem;
+          color: rgba(0, 0, 0, 0.6);
         }
         .title + .company:before {
-          content: ", ";
+          content: ', ';
         }
         .links {
           display: inline-block;
-          margin-left: .4rem;
+          margin-left: 0.4rem;
 
           a {
-            color: rgba(0,0,0,0.4);
+            color: rgba(0, 0, 0, 0.4);
           }
         }
       }
@@ -109,25 +111,6 @@ section#testimonials {
 
   .carousel {
     margin: 3rem 0 5rem 0;
-
-    .flickity-page-dots {
-      .dot {
-        background-color: transparent;
-        border: 2px solid rgba(0,0,0,0.4);
-        opacity: 1.0;
-
-        &.is-selected {
-          background-color: rgba(0,0,0,0.4);
-          border: none;
-        }
-      }
-    }
-
-    @media (max-width: @tabletBreakpoint - 1) {
-      .flickity-prev-prev-button, .flickity-prev-next-button {
-        display: none;
-      }
-    }
   }
 
   .carousel-cell {
@@ -139,7 +122,7 @@ section#testimonials {
       margin: 0 2rem;
       background-color: white;
       border: none;
-      box-shadow: 0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
       border-radius: 0 1rem 1rem 1rem;
     }
 
