feat(gastsby): bump up to v5

--- a/src/components/section-get-started.less
+++ b/src/components/section-get-started.less
@@ -19,6 +19,10 @@
     @media screen and (max-width: @computerBreakpoint) {
       text-align: center;
     }
+
+    .gatsby-image-wrapper {
+      display: inline-block;
+    }
   }
 
   h2 {
