--- a/src/components/top-section-simple-features.less
+++ b/src/components/top-section-simple-features.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 section#simple-features {
   position: relative;
@@ -13,9 +13,9 @@ section#simple-features {
   &:before {
     display: block;
     content: '';
-    width: 0; 
-    height: 0; 
-    border-left: 100vw solid transparent; 
+    width: 0;
+    height: 0;
+    border-left: 100vw solid transparent;
     border-bottom: 10vh solid #7d6ae0;
     position: absolute;
     bottom: 100%;
@@ -33,7 +33,7 @@ section#simple-features {
     position: relative;
     z-index: 0;
     margin-top: 3vh;
-    margin-bottom: -.1875rem;
+    margin-bottom: -0.1875rem;
   }
 
   h2 {
@@ -47,7 +47,7 @@ section#simple-features {
   }
 
   p {
-    opacity: .8;
+    opacity: 0.8;
   }
 
   .video-container {
@@ -55,9 +55,12 @@ section#simple-features {
     overflow: hidden;
     background: white;
 
-    border-radius: .2em;
-    box-shadow: rgba(84, 70, 35, 0.15) 0px 2px 8px, rgba(84, 70, 35, 0.15) 0px 1px 3px, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px;
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07), rgba(255, 255, 255, 0.3) 0px 0px 0px 1px;
+    border-radius: 0.2em;
+    box-shadow: rgba(84, 70, 35, 0.15) 0px 2px 8px,
+      rgba(84, 70, 35, 0.15) 0px 1px 3px,
+      rgba(255, 255, 255, 0.1) 0px 0px 0px 1px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07),
+      rgba(255, 255, 255, 0.3) 0px 0px 0px 1px;
 
     video {
       display: block;
@@ -72,11 +75,12 @@ section#simple-features {
         border-radius: 12px;
         width: 350px;
         max-width: 100%;
+        min-height: 151px;
       }
       h3 {
         font-weight: bold;
         color: white;
-        margin-top: .3em;
+        margin-top: 0.3em;
       }
       p {
         font-size: 1.2rem;
