--- a/src/components/3d-perspective-image.less
+++ b/src/components/3d-perspective-image.less
@@ -20,9 +20,10 @@
     left: 0;
     right: 0;
     pointer-events: none;
-    opacity: .1;
-    color: #3d7aed;
-    transform: translateZ(-200px) translateX(100px) translateY(-200px) scale(1.6);
+    opacity: 0.1;
+    color: var(--primary-color);
+    transform: translateZ(-200px) translateX(100px) translateY(-200px)
+      scale(1.6);
     > svg {
       width: 100%;
       height: auto;
@@ -30,8 +31,9 @@
   }
 
   .bg-triangles-2 {
-    opacity: .1;
-    transform: translateZ(-600px) translateX(100px) translateY(-200px) scale(-2) rotate(90deg);
+    opacity: 0.1;
+    transform: translateZ(-600px) translateX(100px) translateY(-200px) scale(-2)
+      rotate(90deg);
 
     > svg * {
       fill: none;
@@ -40,7 +42,8 @@
   }
 
   .bg-triangles-3 {
-    opacity: .05;
-    transform: translateZ(-1000px) translateX(100px) translateY(-200px) scale(-2);
+    opacity: 0.05;
+    transform: translateZ(-1000px) translateX(100px) translateY(-200px)
+      scale(-2);
   }
 }
