--- a/src/components/pricing-masthead.less
+++ b/src/components/pricing-masthead.less
@@ -1,11 +1,11 @@
-@import "../variables.less";
+@import '../variables.less';
 
 .pricing-masthead {
   .coffee-icon-container {
     display: flex;
     justify-content: center;
     align-content: center;
-    border: 2px solid #031b4e;
+    border: 2px solid var(--foreground-color);
     border-radius: 2rem;
     width: 4rem;
     height: 4rem;
