--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 .masthead {
   text-align: center;
@@ -12,15 +12,17 @@
   margin-bottom: 0;
   padding-bottom: 10vh;
   // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 7px 17px 0 rgba(0, 0, 0, 0.1);
-  color: rgba(3, 27, 78, .7);
+  color: rgba(3, 27, 78, 0.7);
 
   @media (max-width: @tabletBreakpoint) {
     background-position: center bottom;
     background-size: 1600px;
   }
 
-  h1, h2, h3 {
-    color: #031b4e;
+  h1,
+  h2,
+  h3 {
+    color: var(--foreground-color);
   }
 
   h1 {
@@ -35,9 +37,10 @@
     display: inline-block;
   }
 
-  p.sub-headline {
+  .sub-headline {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 1.6rem;
+    margin-top: 1em;
     margin-bottom: 1em;
   }
 
@@ -45,7 +48,7 @@
     h1 {
       font-size: 2.2rem;
     }
-    p.sub-headline {
+    .sub-headline {
       font-size: 1.3rem;
     }
   }
