--- a/src/components/reviews-section-testimonials.less
+++ b/src/components/reviews-section-testimonials.less
@@ -1,4 +1,4 @@
-@import "../variables.less";
+@import '../variables.less';
 
 section#reviews {
   position: relative;
@@ -16,7 +16,7 @@ section#reviews {
     }
   }
 
-  p.sub-headline {
+  .sub-headline {
     text-align: center;
     margin-bottom: 4em;
   }
@@ -41,20 +41,22 @@ section#reviews {
 
       .face {
         border-radius: 50%;
-        box-shadow: 0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07);
+        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1),
+          0 3px 10px rgba(0, 0, 0, 0.07);
       }
 
       .name {
         padding-top: 1rem;
         font-size: 1.2rem;
       }
-      .title, .company {
-        font-size: .9rem;
-        color: rgba(0,0,0,0.6);
+      .title,
+      .company {
+        font-size: 0.9rem;
+        color: rgba(0, 0, 0, 0.6);
       }
       .links {
         a {
-          color: rgba(0,0,0,0.4);
+          color: rgba(0, 0, 0, 0.4);
         }
       }
     }
@@ -64,7 +66,7 @@ section#reviews {
       margin: 0 2rem;
       background-color: white;
       border: none;
-      box-shadow: 0 15px 35px rgba(0,0,0,.1), 0 3px 10px rgba(0,0,0,.07);
+      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
       border-radius: 0 1rem 1rem 1rem;
     }
 
@@ -93,7 +95,7 @@ section#reviews {
         border-radius: 1rem !important;
 
         &:before {
-          content: "";
+          content: '';
           position: absolute;
           right: 0;
           top: -10px;
