--- a/src/components/signup-button.less
+++ b/src/components/signup-button.less
@@ -1,12 +1,12 @@
-@import "../variables.less";
+@import '../variables.less';
 
 .ui.button.signup {
   margin: 1em 0;
-  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 16px;
   min-width: 200px;
   color: white;
-  background: #3d7aed;
+  background: var(--primary-color);
   background: linear-gradient(90deg, #66b6ea 0, #8743ff);
   border-radius: 1.3em;
   box-shadow: 0 10px 30px 2px rgba(159, 191, 255, 0.4);
