--- a/src/components/try-demo-button.less
+++ b/src/components/try-demo-button.less
@@ -3,12 +3,14 @@
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 16px;
   width: 170px;
-  color: #3d7aed;
+  color: var(--primary-color);
   background: #ecf2fd;
-  border: 1px solid #3d7aed;
+  border: 1px solid var(--primary-color);
   border-radius: 1.3em;
 
-  &:hover, &:active, &:focus {
+  &:hover,
+  &:active,
+  &:focus {
     background: white;
   }
 }
