--- a/src/pages/gallery.less
+++ b/src/pages/gallery.less
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    border: 2px solid #031b4e;
+    border: 2px solid var(--foreground-color);
     border-radius: 2rem;
     width: 4rem;
     height: 4rem;
