--- a/src/components/tips-four-steps.less
+++ b/src/components/tips-four-steps.less
@@ -7,6 +7,9 @@
   h3 {
     margin-top: 2rem;
     font-size: 2.1rem;
+    @media (max-width: @mobileBreakpoint) {
+      margin-top: 0.4rem;
+    }
   }
   .zoomable-image.section-header-image {
     border: none;
