--- a/src/components/tips-four-steps_2.less
+++ b/src/components/tips-four-steps_2.less
@@ -19,6 +19,9 @@
   h3 {
     margin-top: 2rem;
     font-size: 2.1rem;
+    @media (max-width: @mobileBreakpoint) {
+      margin-top: 0.4rem;
+    }
   }
 
   .examples {
