feat(seamless-sync): add a link to the note-taking tip page

--- a/src/components/section-fourth.less
+++ b/src/components/section-fourth.less
@@ -45,6 +45,7 @@ section.section-fourth {
 
   .description {
     text-align: left;
+    margin-bottom: 2rem;
 
     .column.grid {
       .column {
@@ -58,6 +59,12 @@ section.section-fourth {
         }
       }
     }
+  }
+
+  .caption {
+    margin-top: 1.5rem;
+    font-size: 1.2rem;
+    color: rgba(255, 255, 255, 0.7);
   }
 
   &:before {
@@ -91,6 +98,9 @@ section.section-fourth {
       margin-bottom: 3rem;
     }
     font-size: 2.82rem;
+    color: white;
+  }
+  h2 > .content {
     color: white;
   }
   h3 {
