--- a/src/components/top-section-seamless-sync.less
+++ b/src/components/top-section-seamless-sync.less
@@ -1,4 +1,9 @@
 @import '../variables.less';
 
 section#seamless-sync {
+  .cover-image {
+    border: 0.5px solid #ffffff60;
+    border-radius: 8px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1), 0 3px 10px rgba(0, 0, 0, 0.07);
+  }
 }
