--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -10,7 +10,7 @@
   background-position: center bottom;
   padding: 3rem 0 0 0;
   margin-bottom: 0;
-  padding-bottom: 10vh;
+  padding-bottom: ~'min(150px, 20vw)';
   // box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 7px 17px 0 rgba(0, 0, 0, 0.1);
   color: rgba(3, 27, 78, 0.7);
 
