Fix: h2 text color

--- a/src/components/section-third.less
+++ b/src/components/section-third.less
@@ -20,6 +20,10 @@ section.section-third {
     -webkit-text-fill-color: black;
   }
 
+  h2::selection{
+    -webkit-text-fill-color: black;
+  }
+
   p,
   ul,
   li {
