Fix: fixing text color w selection active (#27)
* Fix: fixing text color w selection active

--- a/src/components/section-third.less
+++ b/src/components/section-third.less
@@ -16,6 +16,14 @@ section.section-third {
     background-image: linear-gradient(90deg, #e64c4c 0%, #ef32fb 100%);
   }
 
+  h3::selection {
+    -webkit-text-fill-color: black;
+  }
+
+  h2::selection{
+    -webkit-text-fill-color: black;
+  }
+
   p,
   ul,
   li {
