feat(font): use proxima-soft for a rounded typeface
M PLUS is huge as it includes Japanese glyphs

--- a/src/common.less
+++ b/src/common.less
@@ -6,7 +6,7 @@
 
 .ui.button.rounded {
   margin: 0.6em 0 1em 1em;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'proxima-soft', sans-serif;
   font-size: 16px;
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
