--- a/src/components/header-referral.less
+++ b/src/components/header-referral.less
@@ -1,6 +1,5 @@
-
 .header-referral {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'proxima-soft', sans-serif;
   padding: 0px;
   text-align: center;
   background: #ecf2fd;
@@ -14,10 +13,9 @@
     &:after {
       display: block;
       content: '';
-      background: linear-gradient(90deg,#66b6ea 0,#8743ff);
+      background: linear-gradient(90deg, #66b6ea 0, #8743ff);
       margin-top: 2px;
       padding-top: 2px;
     }
   }
-
 }
