--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -27,7 +27,7 @@
 
   h1 {
     font-size: 2.82rem;
-    font-weight: bold;
+    font-weight: 500;
     a {
       color: inherit;
     }
@@ -38,7 +38,7 @@
   }
 
   .sub-headline {
-    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: proxima-soft, sans-serif;
     font-size: 1.6rem;
     margin-top: 1em;
     margin-bottom: 1em;
