--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,8 +1,8 @@
-@import "../common";
+@import '../common';
 
 .main-content {
   p {
-    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-family: 'proxima-soft', sans-serif;
     font-size: 1.6rem;
   }
 
