--- a/src/components/signup-button.less
+++ b/src/components/signup-button.less
@@ -2,7 +2,7 @@
 
 .ui.button.signup {
   margin: 1em 0;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'proxima-soft', sans-serif;
   font-size: 16px;
   min-width: 200px;
   color: white;
