--- a/src/components/try-demo-button.less
+++ b/src/components/try-demo-button.less
@@ -1,6 +1,6 @@
 .ui.button.demo {
   margin: 0.6em 0 1em 1em;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'proxima-soft', sans-serif;
   font-size: 16px;
   width: 170px;
   color: var(--primary-color);
