--- a/src/components/reviews-section-testimonials.less
+++ b/src/components/reviews-section-testimonials.less
@@ -43,6 +43,7 @@ section#reviews {
         border-radius: 50%;
         box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1),
           0 3px 10px rgba(0, 0, 0, 0.07);
+        background-color: white;
       }
 
       .name {
