--- a/src/components/testimonials-faces.less
+++ b/src/components/testimonials-faces.less
@@ -14,6 +14,7 @@
       border: 1px solid rgba(0, 0, 0, 0.2);
       border-radius: 50%;
       margin: 0;
+      background-color: white;
     }
 
     &.active {
