--- a/src/components/masthead.less
+++ b/src/components/masthead.less
@@ -42,6 +42,7 @@
     font-size: 1.6rem;
     margin-top: 1em;
     margin-bottom: 1em;
+    line-height: 1.5;
   }
 
   @media (max-width: @mobileBreakpoint) {
